updated travis ci file

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -10,4 +10,4 @@
     wp_admin_email: 'admin@example.com'
     wp_install_dir: "/var/www/{{ wp_sitename }}"
   roles:
-    - matteocastagnaro.ansible_role_wordpress
+    - MakarenaLabs.ansible_role_wordpress
