--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,5 +10,5 @@ wp_db_collate: ''
 wp_table_prefix: 'wp_'
 wp_debug: false
 wp_admin_email: 'admin@example.com'
-webserver: "{{ wp_webserver }}"
+wp_webserver: nginx
 site_name: "{{ wp_sitename }}"
