--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,9 +54,15 @@
 
 - name: Wordpress | Fetch random salts for wp-config.php
   delegate_to: localhost
-  command: curl https://api.wordpress.org/secret-key/1.1/salt/
+  uri:
+    url: https://api.wordpress.org/secret-key/1.1/salt/
+    return_content: yes
   become: False
-  register: 'wp_salt'
+  register: 'wp_salt_array'
+
+- name: set wp_salt fact
+  set_fact:
+    wp_salt: '{{ wp_salt_array.content }}'
 
 - name: Wordpress | Copy wp-config.php file
   template:
@@ -100,13 +106,10 @@
 
 - name: Installing dependencies
   apt:
-    pkg: "{{ item }}"
+    pkg: [ 'python-mysqldb', 'php-mysql' ]
     update_cache: yes
     cache_valid_time: 86400
     state: present
-  with_items:
-    - 'python-mysqldb'
-    - 'php-mysql'
   notify:
     - restart {{ wp_webserver }}
 
