--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -6,7 +6,7 @@
     wp_mysql_user: 'username_here'
     wp_mysql_password: 'password_here'
     wp_webserver: nginx
-    wp_sitename: example.com
+    wp_sitename: localhost
     wp_admin_email: 'admin@example.com'
     wp_install_dir: "/var/www/{{ wp_sitename }}"
   roles:
