--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,7 +1,17 @@
 ---
 - name: Wordpress | Nginx | Figure out PHP FPM socket location
-  shell: basename $( ls /usr/sbin/php-fpm*)
+  shell: dpkg -l | grep php-fpm  | awk '{print $3}' | grep -o '[0-9]\.[0-9]'
   register: 'php_ver'
+
+- name: Start service php{{ php_ver.stdout }}
+  service:
+    name: "php{{ php_ver.stdout }}-fpm"
+    state: started
+
+- name: Start service nginx
+  service:
+    name: "nginx"
+    state: started
 
 - name: Wordpress | Nginx | Copy virtual host configuration file
   template:
