--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,7 +7,7 @@ lint:
   name: yamllint
 platforms:
   - name: instance
-    image: debian:10
+    image: ${MOLECULE_IMAGE-debian:10}
     exposed_ports:
       - 80/tcp
     published_ports:
