--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,6 +6,7 @@
     update_cache: yes
     cache_valid_time: 86400
     state: present
+  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release != 'trusty'
 
 - name: Wordpress | Install nginx
   apt:
