--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -1,6 +1,6 @@
 ---
 - name: Wordpress | Nginx | Figure out PHP FPM socket location
-  shell: dpkg -l | grep php-fpm  | awk '{print $3}' | grep -o '[0-9]\.[0-9]'
+  shell: dpkg -l | grep php-fpm  | awk '{print $3}' | grep -o '[0-9]\.[0-9]' | head -n 1
   register: 'php_ver'
 
 - name: Start service php{{ php_ver.stdout }}
