--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -6,7 +6,6 @@
     update_cache: yes
     cache_valid_time: 86400
     state: present
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release != 'trusty'
 
 - name: Wordpress | Install nginx
   apt:
@@ -90,7 +89,7 @@
     update_cache: yes
     cache_valid_time: 86400
     state: present
-  when: ansible_distribution == 'Ubuntu' and ansible_distribution_release != 'trusty'
+  when: ansible_distribution == 'Ubuntu'
 
 - name: Installing mariadb-server
   apt:
@@ -114,13 +113,22 @@
   notify:
     - restart {{ wp_webserver }}
 
+- name: Install pymysql
+  apt:
+    pkg: python3-pymysql
+    cache_valid_time: 86400
+    state: present
+  when: ansible_distribution == 'Ubuntu'
+
 - name: Create mysql database
   mysql_db:
     name: "{{ wp_mysql_db }}"
     state: present
+    login_unix_socket: /var/run/mysqld/mysqld.sock
 
 - name: Create mysql user
   mysql_user:
     name: "{{ wp_mysql_user }}"
     password: "{{ wp_mysql_password }}"
     priv: '*.*:ALL'
+    login_unix_socket: /var/run/mysqld/mysqld.sock
