--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,6 +14,7 @@ galaxy_info:
         - disco
     - name: Debian
       versions:
+        - stretch
         - buster
   galaxy_tags:
     - development
