--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 ---
 language: python
-python: "2.7"
+python: "3.7"
 env:
   - PLAY=tests/test.yml
 
@@ -12,7 +12,7 @@ before_install:
 
 install:
   # Install Ansible.
-  - pip install ansible
+  - pip3 install ansible
 
   # Add ansible.cfg to pick up roles path.
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
