--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ dist: xenial
 before_install:
   - sudo add-apt-repository -y ppa:ondrej/php
   - sudo apt-get update -qq
+  - sudo apt-get install python3-mysqldb
 
 install:
   # Install Ansible.
