--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python: "3.7"
 env:
   - PLAY=tests/test.yml
 
-dist: xenial
+dist: bionic
 
 before_install:
   - sudo add-apt-repository -y ppa:ondrej/php
