--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,21 @@
 ---
 language: python
-python: "3.7"
+python: "3.6"
 env:
   - PLAY=tests/test.yml
 
-dist: bionic
+dist: focal
+
+services:
+  - mysql
 
 before_install:
   - sudo add-apt-repository -y ppa:ondrej/php
   - sudo apt-get update -qq
-  - sudo apt-get install python3-mysqldb
 
 install:
   # Install Ansible.
   - pip3 install ansible
-
-  # Install PyMySQL.
-  - pip3 install PyMySQL
 
   # Add ansible.cfg to pick up roles path.
   - "{ echo '[defaults]'; echo 'roles_path = ../'; } >> ansible.cfg"
